--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,19 @@
 checkpoint
+_data
+normalized_training_data
+training_data_statistic
+training_data_statistic_applist
+training_data_statistic_applist_female
+training_data_statistic_applist_male
+training_data_statistic_brands
+training_data_statistic_brands_female
+training_data_statistic_brands_male
+training_data_statistic_gender
+training_data_statistic_province
+training_data_statistic_province_female
+training_data_statistic_province_male
+aiwar_train_data
+aiwar_train_data.gz
 *.index
 *.meta
 *.pyc
