--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,10 @@ oversample_tabbed_training_data
 tabbed_data.tar.bz2
 tabbed_training_data
 undersample_tabbed_training_data
+__t
+split
+train_log
+*.npy
 *.index
 *.meta
 *.pyc
