--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+0.*
 competition_onehot_data
 competition_tabbed_data
 data.tar.bz2
@@ -15,18 +16,19 @@ training_data_statistic_gender
 training_data_statistic_province
 training_data_statistic_province_female
 training_data_statistic_province_male
-aiwar_train_data
-aiwar_train_data.gz
+train_data
+train_data.gz
 oversample_tabbed_training_data
 tabbed_data.tar.bz2
 tabbed_training_data
 undersample_tabbed_training_data
 __t
 split
-aiwar_match_data
-aiwar_match_data.gz
+match_data
+match_data.gz
 oversample_onehot_training_data
 undersample_onehot_training_data
+competition_result*
 *.npy
 *.index
 *.meta
